# fastapi-redis-demo

./: README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 66cdaf826b17_initial_migration.py
app/: config.py  database.py  main.py
app/crud/: user.py
app/schemas/: user.py
app/services/: event_sourcing.py  leaderboard.py  proximity_search.py  redis_lock.py
docker/: Dockerfile
