[tool.poetry]
name = "fastapi-redis-demo"
version = "0.1.0"
description = ""
authors = ["Aiden <antnguyen1281997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
redis = "^5.0.8"
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
greenlet = "^3.0.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
